# OOTPISP-Kuchko

./: README.md  oop2.py
trunk/PO-8_210646/task_01/: README.md
trunk/PO-8_210646/task_01/src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
trunk/PO-8_210646/task_02/: readme.md
trunk/PO-8_210719/task_08/: README.md
trunk/PO-9_210653/lab3/: README.md
trunk/PO-9_210653/lab4/: README.md
trunk/PO-9_210653/lab5/: README.md
trunk/PO-9_210653/lab7/: README.md
trunk/PO-9_210654/task_03/: README.md
trunk/PO-9_210654/task_05/: README.md
trunk/PO-9_210654/task_06/: README.md
trunk/PO-9_210654/task_07/: README.md
trunk/PO-9_210654/task_07/src/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
trunk/PO-9_210658/task-03/: README.md
trunk/PO-9_210658/task_04/: README.md
trunk/PO-9_210658/task_05/: README.md
trunk/PO-9_210658/task_06/: README.md
trunk/PO-9_210658/task_08/: README.md
trunk/PO-9_210659/lab1/: readme.md
trunk/PO-9_210659/lab3/: readme.md
trunk/PO-9_210659/lab4/: readme.md
trunk/PO-9_210659/lab5/: readme.md
trunk/PO-9_210660/task_04/: README.md
trunk/PO-9_210660/task_05/: readme.md
trunk/PO-9_210660/task_07/: README.md
trunk/PO-9_210660/task_08/: README.md
trunk/PO-9_210663/task_02/: README.md
trunk/PO-9_210663/task_07/: README.md
trunk/PO-9_210667/task_03/: README.md
trunk/PO-9_210668/task_06/: README.md
trunk/PO-9_210668/task_08/: README.md
trunk/PO-9_210669/Lab1/: README.md
trunk/PO-9_210671/task_04/: readme.md
trunk/PO-9_210671/task_05/: README.md
trunk/PO-9_210671/task_06/: README.md
(+126 files in other folders)
